--- a/Aplicacion1/Pages/Index.cshtml
+++ b/Aplicacion1/Pages/Index.cshtml
@@ -17,9 +17,8 @@
                 <div class="slide-item">
                     <img src="~/images/img1.jpg">
                     <div class="carousel-caption">
-                            <h1>Image 1</h1>
                             <p>
-                                This is the first image
+                                This 
                             </p>
                         </div>
                 </div>
