--- a/Aplicacion1/wwwroot/css/StyleSheet.css
+++ b/Aplicacion1/wwwroot/css/StyleSheet.css
@@ -23,6 +23,7 @@
     opacity: 0;
     -webkit-transition: opacity 0.6s ease-out;
     transition: opacity 0.6s ease-out;
+    width: 100vw;
    
 
 }
@@ -120,4 +121,16 @@ li:nth-child(3) .slide-circulo {
     font-family: 'Open Sans', sans-serif;
     z-index: 9999;
     text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33), -1px 0px 2px rgba(255, 255, 255, 0);
+}
+
+.mainClass {
+    display: flex;
+    
+}
+
+.divCon {
+    padding: 5px;
+    margin: 5px;
+    text-align: center;
+    border: 1px solid rgba(0, 0, 0, 0.64);
 }
